Fixed Navbar covering filebrowser

--- a/src/styles/Squidink/Main.scss
+++ b/src/styles/Squidink/Main.scss
@@ -4,6 +4,8 @@ body {
 }
 
 .container-custom {
+  position: fixed;
+  top: 5%;
   width: 100%;
   height: 100%;
   display: flex;
